2010-08-27  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Antonio Gomes.

        [Qt] tst_QWebView::focusInputTypes() fails on MeeGo Handset with WebKit 2.1
        https://bugs.webkit.org/show_bug.cgi?id=44761

        Make the test more robust to changes in the execution environment. The click
        are now correctly simulated, and the position are determined from the content.

        The test also create the view and page on the stack to avoid the leak when the
        test is failing.

        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::focusInputTypes):

2010-08-27  Kimmo Kinnunen  <kimmo.t.kinnunen@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Cache plugin info to a persistent database

        https://bugs.webkit.org/show_bug.cgi?id=43179

        Implement a cache of NPAPI plugin metadata. Write the metadata to aa
        file that gets rewritten if any plugin is added / removed.  Compilation
        of the feature is controlled by #if ENABLE(NETSCAPE_PLUGIN_METADATA_CACHE)

        Currently only enabled for Qt UNIX flavors.

        * Api/qwebplugindatabase.cpp:
        (QWebPluginDatabase::plugins):  Match previous behavior: ensure all returned plugins are loaded.
        * Api/qwebsettings.cpp:
        (QWebSettings::enablePersistentStorage): Set plugin cache path.

2010-08-27  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] tst_QWebFrame::inputFieldFocus() fails on MeeGo Handset with QtWebKit 2.1
        https://bugs.webkit.org/show_bug.cgi?id=44703

        Make the test more robust to changes in the execution environment.
        The position where the mouse events are sent is now computed from the element geometry,
        this make the test less dependent on the fonts.

        The test now also make sure the window manager mapped the window on screen
        before attempting to send the events.
